src/snapshots/molt__tests__types__match___nested_type.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (types), stringify! (nested_type))"
---
note: Match
  ┌─ "test_data/types/main.rs":7:14
  │
7 │ pub const x: (Foo, Bar, Baz) = bar;
  │              ^^^^^^^^^^^^^^^ $type
  │
  = $t = Baz
