src/snapshots/molt__tests__types__match___pat_type.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (types), stringify! (pat_type))"
---
note: Match
   ┌─ "test_data/types/main.rs":13:5
   │  
13 │ ╭     let closure = |x: usize, y: Foo<Bar>| {
14 │ │     };
   │ ╰──────^ $x
   │  
   = $ty1 = usize
   = $ty2 = Foo<Bar>
