src/snapshots/molt__tests__types__match___static_.snap
---
source: src/lib.rs
expression: "super :: super :: match_pattern(stringify! (types), stringify! (static_))"
---
note: Match
   ┌─ "test_data/types/main.rs":20:1
   │
20 │ static FOO: Baz = 50;
   │ ^^^^^^^^^^^^^^^^^^^^^ $item
   │
   = $ty = Baz
